@@ -108,8 +108,8 @@ class CachedStorageWrapper extends Storage {
     loadExt( as, ext_id, decrypt=true ) {
         const ki = this[EXT2KEY].get( ext_id );
 
-        if ( ki !== undefined ) {
-            this[KEY_CACHE].get( ki.uuidb64 ); // touch
+        // Ensure sync & touch
+        if ( ki !== undefined && this[KEY_CACHE].get( ki.uuidb64 ) ) {
             as.successStep( ki );
         } else {
             this[TARGET].loadExt( as, ext_id, decrypt );
@@ -141,7 +141,13 @@ class CachedStorageWrapper extends Storage {
         this[TARGET].remove( as, uuidb64 );
 
         as.add( ( as ) => {
-            this[KEY_CACHE].delete( uuidb64 );
+            const key_cache = this[KEY_CACHE];
+            const ki = key_cache.get( uuidb64 );
+
+            if ( ki !== undefined ) {
+                key_cache.delete( uuidb64 );
+                key_cache.dispose( uuidb64, ki );
+            }
         } );
     }
 
