@@ -1,3 +1,6 @@
+=== (next) ===
+FIXED: cache invalidation bug after lru-cache upgrade
+
 === 1.1.11 (2023-03-27) ===
 CHANGED: dependency maintenance
 
